automatically backed up by learn

--- a/students/marcus-jun.html
+++ b/students/marcus-jun.html
@@ -25,8 +25,8 @@
         </div>
         <div class="vitals-text-container">
           <h1 class="profile-name">Marcus Jun</h1>
-          <h2 class="profile-location">Cypress, CA</h2>
-          <div class="profile-quote">Manager for Library Data Migration</div>
+          <h2 class="profile-location">Orange County, CA</h2>
+          <div class="profile-quote"></div>
         </div>
       </div>
       <div class="details-container">
