automatically backed up by learn

--- a/students/marcus-jun.html
+++ b/students/marcus-jun.html
@@ -36,7 +36,7 @@
               <h3>Biography</h3>
             </div>
             <div class="description-holder">
-              <p>Hi! I'm originally from the San Francisco Bay Area. I'm excited to "meet" you all!</p>
+              <p>Hi! I work in a library and I'm learning web development.</p>
             </div>
           </div>
         </div>
@@ -46,8 +46,10 @@
               <h3>Education</h3>
             </div>
             <div class="description-holder">
-              <h4>UCLA</h4>
-              <h5>Teachers College</h5>
+              <h4>Carleton College</h4>
+              <h5>Political Science</h5>
+              <h4>San Jose State University</h4>
+              <h5>Library and Information Science</h5>
             </div>
           </div>
         </div>
