automatically backed up by learn

--- a/students/marcus-jun.html
+++ b/students/marcus-jun.html
@@ -59,12 +59,12 @@
               <h3>Experience</h3>
             </div>
             <div class="description-holder">
-              <h4>Flatiron School</h4>
-              <h5>Community Manager</h5>
+              <h4>California State University</h4>
+              <h5>Manager for Library Data Migration</h5>
             </div>
             <div class="description-holder">
-              <h4>Baruch College</h4>
-              <h5>Student Affairs Coordinator</h5>
+              <h4>California State University Northridge</h4>
+              <h5>Cataloging and Metadata Specialist</h5>
             </div>
           </div>
         </div>
