--- a/index.html
+++ b/index.html
@@ -53,6 +53,17 @@
               </div>
             </a>
           </div>
+          <div class="student-card" id="marcus-jun-card">
+            <a href="students/marcus-jun.html">
+              <div class="view-profile-div">
+                <h3 class="view-profile-text">View Profile</h3>
+              </div>
+              <div class="card-text-container">
+                <h4 class="student-name">Marcus Jun</h4>
+                <p class="student-location">Orange County, CA</p>
+              </div>
+            </a>
+          </div>
 
         </div>
       </div>
