--- a/students/marcus-jun.html
+++ b/students/marcus-jun.html
@@ -19,7 +19,7 @@
         <div class="profile-photo" id="marcus-jun-card"></div>
         <div class="social-icon-container">
           <a href="http://www.github.com/marcusjun"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/github-icon.png"/></a>
-          <a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/rss-icon.png"/></a>
+          <!--<a href="#"><img class="social-icon" src="https://s3.amazonaws.com/learn-verified/rss-icon.png"/></a>-->
         </div>
         <div class="vitals-text-container">
           <h1 class="profile-name">Marcus Jun</h1>
