--- a/students/marcus-jun.html
+++ b/students/marcus-jun.html
@@ -34,7 +34,7 @@
               <h3>Biography</h3>
             </div>
             <div class="description-holder">
-              <p>Hi! I work in a library and I'm learning web development.</p>
+              <p>Hello! I work in a library and I'm learning web development.</p>
             </div>
           </div>
         </div>
