automatically backed up by learn

--- a/students/marcus-jun.html
+++ b/students/marcus-jun.html
@@ -24,7 +24,7 @@
         <div class="vitals-text-container">
           <h1 class="profile-name">Marcus Jun</h1>
           <h2 class="profile-location">Orange County, CA</h2>
-          <div class="profile-quote"></div>
+          <div class="profile-quote">I want to go to there.</div>
         </div>
       </div>
       <div class="details-container">
